--- a/Frontend/src/Components/Trust/trust.css
+++ b/Frontend/src/Components/Trust/trust.css
@@ -1,123 +1,55 @@
 .trust-container {
-    padding: 20px;
-    max-width: 1200px;
-    margin: 0 auto;
-  }
-  
-  .section-header {
-    font-size: 2rem;
-    margin-bottom: 20px;
-  }
-  
-  .section {
-    margin-bottom: 40px;
-  }
-  
-  h3 {
-    font-size: 1.5rem;
-    margin-bottom: 10px;
-  }
-  
-  p {
-    font-size: 1.2rem;
-    line-height: 1.5;
-  }
-  
-  .certification-logo {
-    width: 150px;
-    display: block;
-    margin-top: 10px;
-  }
-  
-  .images-container {
-    margin-top: 1.5rem;
-    display: flex;
-    flex-wrap: wrap;
-    gap: 10px;
-    justify-content: center;
-  }
-  
-  .images-container img {
-    width: 100%;
-    max-width: 45%; 
-    height: auto;
-  }
-  
-  .images-container img.center {
-    max-width: 100%; 
-  }
-  
-  .calculator-screenshot {
-    width: 100%;
-    max-width: 800px; 
-    height: auto;
-    display: block;
-    margin-top: 10px;
-  }
-  
-  .safety-compliance {
-    width: 100%;
-    max-width: 800px; 
-    height: auto;
-    display: block;
-    margin-top: 10px;
-  }
-  
-  .coal-mine {
-    width: 100%;
-    max-width: 1000px; 
-    height: auto;
-    display: block;
-    margin-top: 10px;
-  }
-  
-  @media (max-width: 768px) {
-    .section-header {
-      font-size: 1.5rem;
-    }
-  
-    .section {
-      margin-bottom: 30px;
-    }
-  
-    h3 {
-      font-size: 1.25rem;
-    }
-  
-    p {
-      font-size: 0.875rem;
-    }
-  
-    .images-container {
-      flex-direction: column;
-      align-items: center; 
-    }
-  
-    .images-container img {
-      max-width: 100%; 
-      margin-bottom: 10px;
-    }
-  }
-  
-  @media (max-width: 480px) {
-    .section-header {
-      font-size: 1.25rem;
-    }
-  
-    .section {
-      margin-bottom: 20px;
-    }
-  
-    h3 {
-      font-size: 1.125rem;
-    }
-  
-    p {
-      font-size: 0.75rem;
-    }
-  
-    .images-container img {
-      max-width: 100%;
-    }
-  }
-  
+  max-width: 1000px;
+  margin: 50px auto;
+  padding: 20px;
+  background-color: white;
+  border-radius: 15px;
+  box-shadow: 0px 10px 20px rgba(0, 0, 0, 0.1);
+}
+
+.trust-h1 {
+  font-size: 2.5rem;
+  margin-bottom: 20px;
+  color: #00b312;
+}
+
+.trust-h2 {
+  margin-top: 20px;
+  font-size: 1.5rem;
+  color: #1b3f1c;
+}
+
+p.custom-paragraph {
+  margin-bottom: 20px;
+  padding: 10px;
+  font-size: 1.2rem;
+  color: #333333;
+  line-height: 1.8;
+  text-align: justify;
+  border-left: 5px solid #1b3f1c;
+  background-color: #f9f9f9;
+}
+
+.trust-testimonial {
+  font-style: italic;
+  color: #555555;
+}
+
+.trust-testimonial:before {
+  content: "“";
+}
+
+.trust-testimonial:after {
+  content: "”";
+}
+
+.trust-image-container {
+  margin-top: 20px;
+  text-align: center;
+}
+
+.trust-image-container img {
+  max-width: 100%;
+  height: auto;
+  border-radius: 8px;
+}
